# LaunchkeyMiniMK3

./: .gitignore  CMakeLists.txt  README.md  main.cpp
inc/: application.hpp  midi.hpp
src/: application.cpp  midi.cpp
